[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teodor"
version = "1.0.1"
description = "Mute profanity in video and audio content using AI transcription"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "pysrt>=1.1.2",
    "ffmpeg-python>=0.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "ffsubsync>=0.4.0",
]

[project.scripts]
defuse = "teodor.defuse:main"
defuse-audio = "teodor.defuse_audio:main"
mask-subtitles = "teodor.mask_subtitles:main"
